# SD-HW-6

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  data.js  data.sql  docker-compose.swagger.yml  docker-compose.yaml  docker-compose.yml  event_catalog.md  event_driven_design.md  init_db.bat  init_db.sh  openapi.yaml  optimization.md  performance_design.md  queries.js  queries.sql  schema.sql  schema_design.md  swagger_ui.html  validation.js
.devcontainer/: devcontainer.json
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  secdist.docker.json  secdist.json  static_config.yaml
postgresql/schemas/: postgres-db.sql
src/: auth_middleware.cpp  auth_middleware.hpp  events.cpp  events.hpp  main.cpp  models.hpp  rate_limiter.cpp  rate_limiter.hpp  redis_cache.cpp  redis_cache.hpp  storage.cpp  storage.hpp  storage_mongo.cpp  storage_mongo.hpp  storage_pg.cpp  storage_pg.hpp
src/handlers/: api_handlers.cpp  api_handlers.hpp
tests/: conftest.py  test_api.py  test_events.py
